Committed through web interface.

--- a/www/index.html
+++ b/www/index.html
@@ -1,45 +1,1 @@
-<html>
-<head>
-<title>Project Home Page</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-</head>
-
-<body bgcolor="#FFFFFF" text="#000000">
-<h1>Default project home page </h1>
-<p>Congratulations on your new java.net project! </p>
-<p>This page is the home page for your new project. This content is appearing 
-  because you have selected the option <b>Use project index.html</b>. To edit 
-  the information displayed on this page, just use CVS to check out your project's 
-  CVS repository and edit index.html in directory www. You can get more information 
-  on how to set-up your local CVS client, click on <b>Version Control</b> on the 
-  left nav bar. </p>
-<p>If you don't want to use CVS to manage your home page, click on the <b>Edit 
-  project</b> link on this page and unclick the option <b>Use project index.html</b>. 
-  Your project home page contents will be generated from the <b>Edit project</b> 
-  field <b>Description</b>. Edit the text on that field to change your home page 
-  contents. Click on <b>Submit changes</b> to save your edits. </p>
-<p>If you are looking for <a href="https://java-net.dev.java.net/ProjectPages.html#templates">sample 
-  home page templates</a>, check out the <a href="https://java-net.dev.java.net/ProjectPages.html">java.net 
-  Project Starter Kit</a>. Copy either of the templates into your project's html 
-  to get started on your project's home page. </p>
-<p>You can find lots of helpful information in the Starter Kit to get your project 
-  started. Some of the things you will find in there include:</p>
-<ul>
-  <li>Hints on how to <a href="https://java-net.dev.java.net/ProjectPages.html#pages">set-up 
-    your project's</a> home page</li>
-  <li>Ideas on how to <a href="https://java-net.dev.java.net/ProjectPages.html#publicity">publicize 
-    your project</a> including RSS feeds</li>
-  <li>Hints on <a href="https://java-net.dev.java.net/pagedesign.html">project 
-    page HTML</a></li>
-  <li>Setting up project <a href="https://java-net.dev.java.net/ProjectPages.html#wiki">wiki 
-    pages</a></li>
-  <li>And places to go if <a href="https://java-net.dev.java.net/ProjectPages.html#feedback">you 
-    have questions</a>.</li>
-</ul>
-<p>Remember that you will attract more new members and your project team will 
-  work more effectively if you, as the project owner, supply sufficient information 
-  about your project for visitors to your project space. Good luck with your new 
-  project! </p>
-</body>
-</html>
-
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><h2 style="background: #ffffff none repeat scroll 0% 50%; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial; color: #2b5e82">Welcome to JXTA-C/C++ Project</h2>    <p>JXTA-C/C++ project is an open source cross-platform C/C++ implementation of the JXTA platform with an Apache-like   license.</p>    <p>The community is committed to a 6-month release cycle. For each release, it is currently built and tested on   Solaris/Linux/Windows, MacOS X and BSD are reported to work.</p>    <h3 style="background: #ffffff none repeat scroll 0% 50%; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial; color: #2b5e82">About JXTA</h3>    <p>The JXTA platform is an open network computing platform designed for peer-to-peer (P2P) computing. The JXTA platform   standardizes the manner in which peers:</p>    <ul><li>Advertise and discover resources (Peer, PeerGroup, Service and Pipe Advertisements)</li><li>Communicate with each other (Pipes)</li><li>Cooperate with each other to dynamically form peer groups</li></ul>    <p>Learn more about <a href="http://wiki.java.net/bin/view/Jxta/WhatIsJxta">What Is Jxta</a>.</p>    <h3 style="background: #ffffff none repeat scroll 0% 50%; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial; color: #2b5e82">Getting Involved</h3>    <p>JXTA-C is always looking for more involvement. Visit <a style="color: #2b5e82; font-weight: bold; font-size: larger" href="http://wiki.java.net/bin/view/Jxta/JxtaC">the Wiki</a> to keep track of latest development. You can find more   concrete ideas on how to <a href="http://wiki.java.net/bin/view/Jxta/HelpJxtaC">get involved</a> there.</p>    <p>Participate in <a href="http://jxta-c.jxta.org/servlets/ProjectMailingListList">mailing lists</a> and chat with developers   and users of JXTA with <a href="http://myjxta2.jxta.org/">MyJxta</a> or an IRC   client.</p>    <p>Ready for some coding? You can download the latest version at <a href="http://download.jxta.org/">here</a>. Also try our   <a href="http://jxta-c.jxta.org/servlets/ProjectIssues">Issue tracker</a> and <a href="http://jxta-c.jxta.org/source/browse/jxta-c/">CVS browser</a>.</p>    <p>The project's governing rules can be found at the <a href="http://platform.jxta.org/project/www/govern.html">Governance   Guidelines</a> page.</p>    <h3 style="background: #ffffff none repeat scroll 0% 50%; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial; color: #2b5e82">Contacting Us</h3>    <ul><li><strong>Mailing list</strong>: <a href="mailto:discuss@jxta-c.jxta.org">discuss SPAM_at_SPAM jxta-c.jxta.org</a></li><li><strong>IRC</strong>: #jxta at <a href="http://www.freenode.net/">freenode.net</a></li><li><strong>MyJxta</strong>: <a href="http://download.jxta.org/build/nightly/jnlp/myjxta.jnlp">Java Webstart</a> or download it at     <a href="http://myjxta2.jxta.org/">MyJxta project</a></li></ul>
