add link for get involved

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -96,7 +96,8 @@ addLoadEvent(function() {
 	}
 	
 	// added in the reverse order
-	addIcon("http://wiki.java.net/bin/view/Jxta/WhatIsJxta","communities.gif","Get Started");
+	addIcon("http://wiki.java.net/bin/view/Jxta/HelpJxtaC","srcbrowse.gif","Get Involved");
+	addIcon("http://wiki.java.net/bin/view/Jxta/JxtaC","communities.gif","Get Started");
 	addIcon("http://download.java.net/jxta","download.gif","Download");
 	
 	var div = document.createElement("div");
