use default style to match the theme

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h2 style="background: #ffffff; color: #2B5E82">Welcome to JXTA-C/C++ Project</h2>
+  <h2>Welcome to JXTA-C/C++ Project</h2>
 
   <p>JXTA-C/C++ project is an open source cross-platform C/C++ implementation of the JXTA platform with an Apache-like
   license.</p>
@@ -18,7 +18,7 @@
   <p>The community is committed to a quarterly release cycle. For each release, it is currently built and tested on
   Solaris/Linux/Windows, MacOS X and BSD are reported to work.</p>
 
-  <h3 style="background: #ffffff; color: #2B5E82">About JXTA</h3>
+  <h3>About JXTA</h3>
 
   <p>The JXTA platform is an open network computing platform designed for peer-to-peer (P2P) computing. The JXTA platform
   standardizes the manner in which peers:</p>
@@ -33,7 +33,7 @@
 
   <p>Learn more about <a href="http://wiki.java.net/bin/view/Jxta/WhatIsJxta">What Is Jxta</a>.</p>
 
-  <h3 style="background: #ffffff; color: #2B5E82">Getting Involved</h3>
+  <h3>Getting Involved</h3>
 
   <p>JXTA-C is always looking for more involvement. Visit <a href="http://wiki.java.net/bin/view/Jxta/JxtaC" style=
   "color: #2B5E82; font-weight: bold; font-size:larger">the Wiki</a> to keep track of latest development. You can find more
@@ -50,7 +50,7 @@
   <p>The project's governing rules can be found at the <a href="http://platform.jxta.org/project/www/govern.html">Governance
   Guidelines</a> page.</p>
 
-  <h3 style="background: #ffffff; color: #2B5E82">Contacting Us</h3>
+  <h3>Contacting Us</h3>
 
   <ul>
     <li><b>Mailing list</b>: <a href="mailto:discuss@jxta-c.dev.java.net">discuss SPAM_at_SPAM jxta-c.dev.java.net</a></li>
