add default jxta forum

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -24,6 +24,9 @@
       <a href="/servlets/ProjectMailingListList">Mailing lists</a>
     </li>
     <li>
+      <a href="http://forums.java.net/jive/category.jspa?categoryID=34">Discussion forum</a>
+    </li>
+    <li>
       <a href="#">Using JXTA-C</a>
       <ul>
         <li>
